--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-EMAIL_USER=ruthishkumar.2353045@srec.ac.in
-EMAIL_PASS=lpbf sydp asdl whus
-TWILIO_SID=AC0b89c94063045013aca9a9844fa2a75c
-TWILIO_AUTH=017f9da8f29e958ad41aa42a6a6edb8e
-TWILIO_PHONE=+17032154561
+EMAIL_ADDRESS=ruthishkumar.2353045@srec.ac.in
+EMAIL_PASSWORD=lpbf sydp asdl whus
+TWILIO_ACCOUNT_SID = "AC0b89c94063045013aca9a9844fa2a75c"
+TWILIO_AUTH_TOKEN = "017f9da8f29e958ad41aa42a6a6edb8e"
+TWILIO_PHONE_NUMBER = "+17032154561"
